elixir/force-app/main/default/objects/genesis__Employment_Information__c/fields/ABN_Effective_From__c.field-meta.xml
<CustomField>
    <fullName>ABN_Effective_From__c</fullName>
    <label>ABN Effective From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>