elixir/force-app/main/default/objects/genesis__Employment_Information__c/fields/Business_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Business_Start_Date__c</fullName>
    <label>Business Start Date</label>
    <type>Date</type>
</CustomField>