elixir/force-app/main/default/objects/genesis__Employment_Information__c/fields/Company_ABN__c.field-meta.xml
<CustomField>
    <fullName>Company_ABN__c</fullName>
    <label>Company ABN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>