elixir/force-app/main/default/objects/genesis__Employment_Information__c/fields/Company_ACN__c.field-meta.xml
<CustomField>
    <fullName>Company_ACN__c</fullName>
    <label>Company ACN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>