elixir/force-app/main/default/objects/genesis__Employment_Information__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Document_Type_Set</valueSetName>
    </valueSet>
</CustomField>