elixir/force-app/main/default/objects/genesis__Employment_Information__c/fields/Employment_Duration__c.field-meta.xml
<CustomField>
    <fullName>Employment_Duration__c</fullName>
    <formula>(Today() -  genesis__Start_Date__c) / 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employment Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>