elixir/force-app/main/default/objects/genesis__Employment_Information__c/fields/Flag_Emp__c.field-meta.xml
<CustomField>
    <fullName>Flag_Emp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag Emp</label>
    <type>Checkbox</type>
</CustomField>