elixir/force-app/main/default/objects/genesis__Employment_Information__c/fields/genesis__Application__c.field-meta.xml
<CustomField>
    <fullName>genesis__Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>genesis__Applications__c</referenceTo>
    <relationshipLabel>Employment Information</relationshipLabel>
    <relationshipName>Employment_Information</relationshipName>
    <type>Lookup</type>
</CustomField>