elixir/force-app/main/default/objects/genesis__Employment_Information__c/fields/genesis__Average_Monthly_Income__c.field-meta.xml
<CustomField>
    <fullName>genesis__Average_Monthly_Income__c</fullName>
    <description>This field will store the monthly income amount</description>
    <label>Average Monthly Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>