elixir/force-app/main/default/objects/genesis__Employment_Information__c/fields/genesis__Contact__c.field-meta.xml
<CustomField>
    <fullName>genesis__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this is null, it is for contact (borrower) of an application</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Employment Information</relationshipLabel>
    <relationshipName>Employment_Information</relationshipName>
    <type>Lookup</type>
</CustomField>