elixir/force-app/main/default/objects/genesis__Employment_Information__c/fields/genesis__End_Date__c.field-meta.xml
<CustomField>
    <fullName>genesis__End_Date__c</fullName>
    <description>End date of employment</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>