elixir/force-app/main/default/objects/genesis__Employment_Information__c/fields/genesis__Is_Current_Employer__c.field-meta.xml
<CustomField>
    <fullName>genesis__Is_Current_Employer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For current employer, the value would be true and false for previous employer</description>
    <label>Is Current Employer</label>
    <type>Checkbox</type>
</CustomField>