elixir/force-app/main/default/objects/genesis__Employment_Information__c/fields/genesis__Phone__c.field-meta.xml
<CustomField>
    <fullName>genesis__Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>