elixir/force-app/main/default/objects/genesis__Employment_Information__c/fields/genesis__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>genesis__Start_Date__c</fullName>
    <description>Start date of employment</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>