elixir/force-app/main/default/objects/genesis__Employment_Information__c/fields/Goods_Services_Tax__c.field-meta.xml
<CustomField>
    <fullName>Goods_Services_Tax__c</fullName>
    <label>Goods &amp; Services Tax</label>
    <length>255</length>
    <type>Text</type>
</CustomField>