elixir/force-app/main/default/objects/genesis__Employment_Information__c/fields/Government_Benefits_Amount__c.field-meta.xml
<CustomField>
    <fullName>Government_Benefits_Amount__c</fullName>
    <label>Government Benefits Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>