elixir/force-app/main/default/objects/genesis__Employment_Information__c/fields/Income_Type__c.field-meta.xml
<CustomField>
    <fullName>Income_Type__c</fullName>
    <label>Income Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gross Salary</fullName>
            </value>
            <value>
                <fullName>Gross Regular Overtime</fullName>
            </value>
            <value>
                <fullName>Bonus</fullName>
            </value>
            <value>
                <fullName>Commission</fullName>
            </value>
            <value>
                <fullName>Car Allowance</fullName>
            </value>
            <value>
                <fullName>Work Allowance</fullName>
            </value>
            <value>
                <fullName>Workers Compensation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>