elixir/force-app/main/default/objects/genesis__Employment_Information__c/fields/Income_Ver__c.field-meta.xml
<CustomField>
    <fullName>Income_Ver__c</fullName>
    <label>Income Verification Sighted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>