elixir/force-app/main/default/objects/genesis__Employment_Information__c/fields/Months_Self_Employed__c.field-meta.xml
<CustomField>
    <fullName>Months_Self_Employed__c</fullName>
    <label>Months Self Employed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>