elixir/force-app/main/default/objects/genesis__Employment_Information__c/fields/Not_Employed_Type__c.field-meta.xml
<CustomField>
    <fullName>Not_Employed_Type__c</fullName>
    <label>Not Employed Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Benefits</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Home Duties</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>