elixir/force-app/main/default/objects/genesis__Employment_Information__c/fields/Occupation__c.field-meta.xml
<CustomField>
    <fullName>Occupation__c</fullName>
    <label>Occupation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Clerical or Administrative Worker</fullName>
            </value>
            <value>
                <fullName>Community or Personal Service Worker</fullName>
            </value>
            <value>
                <fullName>Labourer</fullName>
            </value>
            <value>
                <fullName>Machinery Operators and Driver</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>Sales Worker</fullName>
            </value>
            <value>
                <fullName>Technician or Trade Worker</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>