elixir/force-app/main/default/objects/genesis__Employment_Information__c/fields/Other_Income_Amount__c.field-meta.xml
<CustomField>
    <fullName>Other_Income_Amount__c</fullName>
    <label>Other Income Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>