elixir/force-app/main/default/objects/genesis__Employment_Information__c/fields/Other_Income_Verification__c.field-meta.xml
<CustomField>
    <fullName>Other_Income_Verification__c</fullName>
    <label>Other Income Verification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>