elixir/force-app/main/default/objects/genesis__Employment_Information__c/fields/PAYG_Employment__c.field-meta.xml
<CustomField>
    <fullName>PAYG_Employment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PAYG Employment</label>
    <type>Checkbox</type>
</CustomField>