elixir/force-app/main/default/objects/genesis__Employment_Information__c/fields/PAYG_Income__c.field-meta.xml
<CustomField>
    <fullName>PAYG_Income__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PAYG Income</label>
    <type>Checkbox</type>
</CustomField>