elixir/force-app/main/default/objects/genesis__Employment_Information__c/fields/Previous_Employment__c.field-meta.xml
<CustomField>
    <fullName>Previous_Employment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Previous Employment</label>
    <type>Checkbox</type>
</CustomField>