elixir/force-app/main/default/objects/genesis__Employment_Information__c/fields/Proof_Sighted__c.field-meta.xml
<CustomField>
    <fullName>Proof_Sighted__c</fullName>
    <label>Proof Sighted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>