elixir/force-app/main/default/objects/genesis__Employment_Information__c/fields/Self_Employed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Self_Employed_Amount__c</fullName>
    <label>Self Employed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>