elixir/force-app/main/default/objects/genesis__Employment_Information__c/fields/Superannuation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Superannuation_Amount__c</fullName>
    <label>Superannuation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>