elixir/force-app/main/default/objects/genesis__Employment_Information__c/fields/Total_Current_Income_Period__c.field-meta.xml
<CustomField>
    <fullName>Total_Current_Income_Period__c</fullName>
    <label>Total Current Income Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>