elixir/force-app/main/default/objects/genesis__Employment_Information__c/fields/Total_Previous_Income_Period__c.field-meta.xml
<CustomField>
    <fullName>Total_Previous_Income_Period__c</fullName>
    <label>Total Previous Income Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>