elixir/force-app/main/default/objects/genesis__Employment_Information__c/fields/Unemployed__c.field-meta.xml
<CustomField>
    <fullName>Unemployed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unemployed</label>
    <type>Checkbox</type>
</CustomField>