elixir/force-app/main/default/objects/genesis__Employment_Information__c/fields/Workers_Compensation_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Workers_Compensation_Frequency__c</fullName>
    <label>Workers Compensation Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>Fortnightly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>