elixir/force-app/main/default/objects/genesis__Employment_Information__c/recordTypes/Contractor.recordType-meta.xml
<RecordType>
    <fullName>Contractor</fullName>
    <active>true</active>
    <label>Contractor</label>
</RecordType>