elixir/force-app/main/default/objects/genesis__Employment_Information__c/recordTypes/Self_Employed.recordType-meta.xml
<RecordType>
    <fullName>Self_Employed</fullName>
    <active>true</active>
    <label>Self Employed</label>
</RecordType>