elixir/force-app/main/default/objects/genesis__Employment_Information__c/recordTypes/Unemployed.recordType-meta.xml
<RecordType>
    <fullName>Unemployed</fullName>
    <active>true</active>
    <label>Unemployed</label>
</RecordType>