elixir/force-app/main/default/objects/genesis__Employment_Information__c/validationRules/Phone_Number_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Number_Check</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(genesis__Phone__c,&quot;([0-9])*&quot;))</errorConditionFormula>
    <errorMessage>Telephone Number should contain only number.</errorMessage>
</ValidationRule>