elixir/force-app/main/default/objects/genesis__Employment_Information__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Company_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>